test/scc/pp/errors/060.a
060.t:1:13: error: expected a library name